tests/NormalTests/paczka1/fuzzy1/80871406.err
Error in line 1: u8YXT84z S799 85,2
Error in line 2: u8YXT84z S935 33,2
Error in line 10: DhQC S6O9 101,6
Error in line 13: R3MrVf5 S659 73,9
Error in line 5: u8YXT84z S935 21,3
Error in line 23: S935 A767 14,0
Error in line 19: R3MrVf5 S935 83,1
Error in line 26: R3MrVf5 A767 19,6
Error in line 22: j3wPaJW9au A767 27,5
Error in line 34: j3wPaJW9au S799 37,1
